tests/snapshots/integration__integration_tests__merge__merge_to_non_default_target.snap
---
source: tests/integration_tests/merge.rs
info:
  program: wt
  args:
    - merge
    - staging
  env:
    APPDATA: "[TEST_CONFIG_HOME]"
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: "[TEST_GIT_CONFIG]"
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    GIT_TERMINAL_PROMPT: "0"
    HOME: "[TEST_HOME]"
    LANG: C
    LC_ALL: C
    PATH: "[PATH]"
    SOURCE_DATE_EPOCH: "1735776000"
    USERPROFILE: "[TEST_HOME]"
    WORKTRUNK_CONFIG_PATH: "[TEST_CONFIG]"
    XDG_CONFIG_HOME: "[TEST_CONFIG_HOME]"
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
🔄 [36mRebasing onto [1mstaging[22m...[39m
✅ [32mRebased onto [1mstaging[22m[39m
🔄 [36mMerging 1 commit to [1mstaging[22m @ [2m278a642[22m (no commit/squash needed)[39m
[107m [0m  * [33m278a642[m Add feature for staging
[107m [0m   feature.txt | 1 [32m+[m
[107m [0m   1 file changed, 1 insertion(+)
✅ [32mMerged to [1mstaging[22m [90m(1 commit, 1 file, [32m+1[39m[39m[90m)[39m[39m
🔄 [36m[36mRemoving [1mfeature-for-staging[22m worktree & branch in background (same commit as [1mstaging[22m, [2m_[22m)[39m[39m
